deploy/k8s/base/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inner-cosmos-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: inner-cosmos
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
